# playwright-deep-dive

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Playwright Deep Dive Workshop - Python Readme.md  Playwright Deep Dive Workshop - TS Readme.md  package-lock.json  package.json  playwright.config.ts  readme.python.md  readme.ts.md
python_tests/: conftest.py  pyproject.toml  requirements.txt
python_tests/demos/d01/: test_firsttest.py  test_firsttest_beforeeach.py
python_tests/demos/d101/: test_simple_navigation.py
python_tests/demos/d102/: test_screenshot.py
python_tests/demos/d103/: test_upload_download.py
python_tests/demos/d104/: test_debugging.py
python_tests/demos/d105/: test_auth.py
python_tests/demos/d106/: test_api.py  test_api2.py
python_tests/demos/d107/: test_api_mocking.py
python_tests/demos/d108/: test_api_fixture.py  test_auth_fixture.py
python_tests/exercises/e101/: test_e101.py
python_tests/exercises/e102/: test_e102a.py  test_e102b.py
python_tests/exercises/e103/: test_e103.py
python_tests/exercises/e104/: test_e104a.py  test_e104b.py  test_e104c.py
python_tests/exercises/e106/: test_e106.py
python_tests/exercises/e107/: test_e107.py
python_tests/exercises/e108/: test_e108.py
python_tests/exercises/e109/: test_e109a.py  test_e109b.py
python_tests/exercises/e110/: test_e110.py
python_tests/playwright_deep_dive_tests.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_tests/solutions/e101/: test_s101.py
python_tests/solutions/e102/: test_s102a.py  test_s102b.py
python_tests/solutions/e103/: test_s103.py
(+110 files in other folders)
