[project]
name = "playwright-deep-dive-tests"
version = "0.1.0"

[tool.pytest.ini_options]
# Configure pytest options here
base_url = "http://127.0.0.1:3000"


[tool.setuptools.packages.find]
# Explicitly tell setuptools where to find packages.
# We are saying: "Look for packages in the current directory ('.')"
where = ["."]
# And include ALL packages you find (e.g., demos, fixtures, exercises, etc.)
include = ["*"]